Fixed Ko-Fi button overlay on blog posts, preventing readability on mobile views

--- a/public/CSS/blog/base.css
+++ b/public/CSS/blog/base.css
@@ -110,6 +110,11 @@ body {
 }
 
 @media only screen and (max-width: 600px) {
+  
+    [id^="kofi-widget-overlay"] {
+      display: none;
+    }
+
     .container {
         width: 100%;
         display: flex;
